cmake_minimum_required(VERSION 3.21)

project(MathLibProject VERSION 1.0 LANGUAGES CXX)


set(CMAKE_CTEST_ARGUMENTS "--output-on-failure" "--output-junit" "junit.xml")
# This must be in the top-level CMakeLists.txt to enable CMake/CTest support.
include(CTest)

set(CMAKE_CXX_STANDARD 11)

add_executable(MathApp src/main.cpp src/math_functions.cpp)

target_include_directories(MathApp PUBLIC include)

enable_testing()


include(FetchContent)
FetchContent_Declare(
   Catch2
   GIT_REPOSITORY https://github.com/catchorg/Catch2.git
   GIT_TAG v3.6.0
)


FetchContent_MakeAvailable(Catch2)


add_executable(unit_tests tests/math_tests.cpp src/math_functions.cpp)
target_link_libraries(unit_tests PRIVATE Catch2::Catch2WithMain)
target_include_directories(unit_tests PUBLIC include)


list(APPEND CMAKE_MODULE_PATH ${catch2_SOURCE_DIR}/extras)
include(CTest)
include(Catch)
catch_discover_tests(unit_tests)